fix up banner, but not with navs; z-index?

--- a/exam0/css/index.css
+++ b/exam0/css/index.css
@@ -14,13 +14,14 @@ a {text-decoration: none; color: inherit;}
 .logo > img{width: 250px; vertical-align: middle;}
 
 .navs {float: right; width: 750px; height: 100%;}
-.nav {width: 250px; float: left; }
+.nav {width: 250px; float: left; text-align: center;}
 .nav > div {/* padding:1rem; */ font-size: 1.3rem;}
 .nav > div:hover {background: #eee}
-.nav > ul {width: 250px; background-color: rgba(1, 1, 1, 0.2);  }
-.nav > ul > li {font-weight: bold;}
+.nav > ul {width: 250px; background-color: rgba(1, 1, 1, 0.2); display: none; text-align: center;}
+.nav > ul > li {font-weight: bold; z-index: 9999; }
 .nav > ul > li:hover {background: #eee;}
 
-.banner {width: 1200px; height: 700px;}
-.banner > ul {width: 1000px; height: 350px; top:200px; left: 0; overflow: hidden; margin: 0 auto}
-.banner > ul > li {position: absolute;}
+.section {width: 100%; height: 700px;}
+.banner {width: 1000px; height: 700px; position: relative; margin: 0 auto; z-index: 1000; }
+.banner > ul {width: 6000px; height: 350px; top:0px; left: 0; /* overflow: hidden; */ margin: 0 auto; position: absolute; }
+.banner > ul > li {float: left;}
